Fixed Button Spacing

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -133,16 +133,6 @@ figcaption {
     width: 19em;
 }
         
-.billboard {
-    position: relative;
-    padding-top: 3em;
-    background-image: url(../images/bannerimage.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover; 
-    height: 500px;
-}
-    
 h1 {
     text-align: left;
     text-transform: none;
@@ -152,6 +142,16 @@ h1 {
     font-family: 'Lato';
     font-style: italic;
     font-weight: 900;
+}
+
+.billboard {
+    position: relative;
+    padding-top: 3em;
+    background-image: url(../images/bannerimage.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover; 
+    height: 500px;
 }
 
 .billboard a:hover {
@@ -173,6 +173,9 @@ h1 {
     border-color: #FFE500;
     color: #FFE500;
     border-width: 2.5px;
+    text-align: center;
+    height: 2rem;
+    width: 11rem;
 }
 
 .whitetype {
